syntax = "proto3";

package cloudfoundry.copilot.protos;

message Route {
  string guid = 1;
  string host = 2;
  string path = 3;
}
message UpsertRouteRequest {
  Route route = 1;
}

message UpsertRouteResponse {}

message DeleteRouteRequest {
  string guid = 1;
}

message DeleteRouteResponse {}

message CapiProcess {
  string guid = 1;
  string diego_process_guid = 2;
  string app_guid = 3;
}

message UpsertCapiProcessRequest {
  CapiProcess capi_process = 1;
}

message UpsertCapiProcessResponse {}

message DeleteCapiProcessRequest {
  string guid = 1;
}

message DeleteCapiProcessResponse {}

message RouteMapping {
  string capi_process_guid = 1;
  string route_guid = 2;
}

message MapRouteRequest {
  RouteMapping route_mapping = 1;
}

message MapRouteResponse {}

message UnmapRouteRequest {
  string capi_process_guid = 1;
  string route_guid = 2;
}

message UnmapRouteResponse {}

message BulkSyncRequest {
  repeated Route routes = 1;
  repeated CapiProcess processes = 2;
  repeated RouteMapping route_mappings = 3;
}

message BulkSyncResponse {}

service CloudControllerCopilotFuture {
  rpc UpsertRoute(UpsertRouteRequest) returns (UpsertRouteResponse) {}
  rpc DeleteRoute (DeleteRouteRequest) returns (DeleteRouteResponse) {}

  rpc UpsertCapiProcess(UpsertCapiProcessRequest) returns (UpsertCapiProcessResponse) {}
  rpc DeleteCapiProcess (DeleteCapiProcessRequest) returns (DeleteCapiProcessResponse) {}

  rpc MapRoute (MapRouteRequest) returns (MapRouteResponse) {}
  rpc UnmapRoute (UnmapRouteRequest) returns (UnmapRouteResponse) {}

  rpc BulkSync (BulkSyncRequest) returns (BulkSyncResponse) {}
}

