syntax = "proto3";

package api;

message HealthResponse {
  bool healthy = 1;
}
message HealthRequest {
}

